<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BmrFragment"
        android:id="@+id/frameLayout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_bmr_title"
            android:id="@+id/text_view_bmr_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/text_view_bmr_base_preface"
            app:layout_constraintVertical_chainStyle="packed" />

    <TextView
            android:text="@string/text_view_bmr_base_preface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_bmr_base_preface"
            app:layout_constraintTop_toBottomOf="@+id/text_view_bmr_title"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/text_view_bmr_title"
            app:layout_constraintEnd_toEndOf="@+id/text_view_bmr_title"
            app:layout_constraintBottom_toTopOf="@+id/text_view_bmr_base_calculated"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <TextView
            android:text="@string/text_view_bmr_base_calculated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_bmr_base_calculated"
            app:layout_constraintTop_toBottomOf="@+id/text_view_bmr_base_preface"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintStart_toStartOf="@+id/text_view_bmr_base_preface"
            app:layout_constraintBottom_toTopOf="@+id/text_view_bmr_target_preface" />

    <TextView
            android:text="@string/text_view_bmr_target_preface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_bmr_target_preface"
            app:layout_constraintTop_toBottomOf="@+id/text_view_bmr_base_calculated"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/text_view_bmr_base_calculated"
            app:layout_constraintBottom_toTopOf="@+id/text_view_bmr_target_calculated" />

    <TextView
            android:text="@string/text_view_bmr_target_calculated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_bmr_target_calculated"
            app:layout_constraintTop_toBottomOf="@+id/text_view_bmr_target_preface"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintStart_toStartOf="@+id/text_view_bmr_target_preface" />

</androidx.constraintlayout.widget.ConstraintLayout>
